expose-mycluster-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycluser-nodeport
spec:
  type: NodePort
  selector:
    mysql.oracle.com/cluster: mycluster
  ports:
  - protocol: TCP
    port: 33060
    targetPort: 3306
