expose-mycluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mycluster-ingress
spec:
  rules:
  - host: 192.168,1.186
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mycluser-nodeport
            port:
              number: 33060
